# QNotified

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  CardMsgBlackList.json  EULA  EULA.txt  LICENSE.md  README.md  azure-pipelines.yml  build.gradle  build.gradle.kts  common.gradle  eula.md  gradle.properties  naked_ci.sh  news.json  settings.gradle  settings.gradle.kts  update_info
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature-request.md
.github/workflows/: auto_close_issues.yml  check_commit_message.yml  ci.yml  codeql-analysis.yml  lint-code.yml  stale.yml
annotations/: build.gradle
annotations/src/main/java/cn/lliiooll/annotations/: Dex2C.java
app/: appcenter-post-clone.sh  build.gradle  build.gradle.kts  lint.xml  proguard-rules.pro
app/schemas/me.singleneuron.qn_kernel.database.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 9280425.mol  atp.mol  c3h5_ono2_3.mol  demo.java  eula.md  eula.txt  na_cert.bks  native_init  readme.md  test.mol  xposed_init
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/libnatives/: NativeHookEntry.h  NativeMainHook.cc  NativeMainHook.h  Natives.cpp  natives_utils.h  version.c
app/src/main/java/cc/ioctl/: H.java  NativeHookCallback.java
app/src/main/java/cc/ioctl/activity/: ChatTailActivity.java  ExfriendListActivity.java  FakeBatCfgActivity.java  FriendlistExportActivity.java  JefsRulesActivity.java  ManageScriptsActivity.java  MmkvTestActivity.kt  ScriptGuideActivity.java  SecurityTestActivity.java
app/src/main/java/cc/ioctl/chiral/: ChiralCarbonHelper.java  MdlMolParser.java  Molecule.java  MoleculeView.java
app/src/main/java/cc/ioctl/dialog/: RepeaterIconSettingDialog.java  RikkaBaseApkFormatDialog.java  RikkaColorPickDialog.java  RikkaCustomDeviceModelDialog.java  RikkaCustomMsgTimeFormatDialog.java  RikkaCustomSplash.java  RikkaDialog.java  ScriptSettingDialog.java
app/src/main/java/cc/ioctl/hook/: $endGiftHook.java  AddAccount.java  ArbitraryFrdSourceId.java  BlockFluxThief.java  CardMsgHook.java  (+36 more)
app/src/main/java/cn/lliiooll/: QNClient.java
app/src/main/java/mqq/app/: AccountNotMatchException.java  AppActivity.java  BaseActivity.java  MobileQQ.java
app/src/main/java/mqq/manager/: Manager.java
app/src/main/jni/: CMakeLists.txt  Natives.cpp  Natives.h  natives_utils.h
app/src/main/res/drawable/: bg_green_solid.xml  bg_red_solid.xml  bg_ripple_rect.xml  bg_shadow.xml  bg_trans_border.xml  bg_trans_border_null_ripple.xml  bg_trans_border_ripple.xml  bg_yellow_solid.xml  ic_assignment.xml  ic_bg_gradient.xml  ic_bg_white.xml  ic_build.xml  ic_check_circle.xml  ic_chevron_right.xml  ic_dashboard.xml  ic_failure_white.xml  ic_github.xml  ic_help.xml  ic_home.xml  ic_info.xml  ic_info_blue.xml  ic_settings.xml  ic_success_white.xml  ic_warn_white.xml  selector_menu_color.xml
app/src/main/res/drawable-v24/: ic_bg_gradient.xml
app/src/main/res/layout/: activity_bug_report.xml  activity_change_drawer_width.xml  activity_database_test.xml  activity_main.xml  activity_main2.xml  activity_new_settings.xml  dialog_clickable_item.xml  fragment_dashboard.xml  fragment_home.xml  fragment_info.xml  fragment_loading_bug_report.xml  fragment_readme.xml  fragment_troubleshoot.xml  kyuubiran_auto_renew_fire.xml  kyuubiran_do_not_play_with_fire_dialog.xml  kyuubiran_revoke_msg_dialog.xml  main.xml  main_v2.xml  main_v2_blues.xml  main_v2_rikkaui.xml  preference_dialog_et.xml  rikka_base_apk_dialog.xml  rikka_custom_device_model_dialog.xml  rikka_msg_time_formart_dialog.xml  rikka_select_splash_dialog.xml  rikka_theme_pick_color_dialog.xml  script_setting_dialog.xml  select_repeater_icon_dialog.xml  simple_license_item.xml
app/src/main/res/menu/: bottom_nav_menu.xml  main_v2_toolbar.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-en-rUS/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: pref_about.xml  pref_bug_report.xml  pref_chat.xml  pref_extension.xml  pref_mainui.xml  pref_setting.xml  pref_sidebar.xml  pref_troop.xml
app/stub/com/tencent/mobileqq/app/: BaseActivity.java  IphoneTitleBarActivity.java
app/stub/com/tencent/mobileqq/widget/: BounceScrollView.java
app/stub/com/tencent/widget/: Switch.java  XListView.java
app/stub/mqq/app/: AppRuntime.java  MobileQQ.java
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Common.kt  ReplaceIcon.kt  Version.kt
compiler/: build.gradle
docs/: CODE_OF_CONDUCT.md
gradle/wrapper/: gradle-wrapper.properties
libs/annotations/: build.gradle
libs/compiler/: build.gradle  build.gradle.kts
libs/dex-ptm/: build.gradle  build.gradle.kts
libs/mmkv/Android/: build.gradle
libs/mmkv/Android/src/main/cpp/: flutter-bridge.cpp  native-bridge.cpp
libs/mmkv/Core/: CodedInputData.cpp  CodedInputData.h  CodedInputDataCrypt.cpp  CodedInputDataCrypt.h  CodedOutputData.cpp  CodedOutputData.h  InterProcessLock.cpp  InterProcessLock.h  InterProcessLock_Android.cpp  KeyValueHolder.cpp  KeyValueHolder.h  MMBuffer.cpp  MMBuffer.h  MMKV.cpp  MMKV.h  MMKVLog.cpp  MMKVLog.h  MMKVLog_Android.cpp  MMKVMetaInfo.hpp  MMKVPredef.h  MMKV_Android.cpp  MMKV_IO.cpp  MMKV_IO.h  MemoryFile.cpp  MemoryFile.h  MemoryFile_Android.cpp  MiniPBCoder.cpp  MiniPBCoder.h  PBEncodeItem.hpp  PBUtility.cpp  PBUtility.h  ScopedLock.hpp  ThreadLock.cpp  ThreadLock.h
libs/mmkv/Core/aes/: AESCrypt.cpp  AESCrypt.h
libs/mmkv/Core/aes/openssl/: openssl_aes.h  openssl_aes_core.cpp  openssl_arm_arch.h  openssl_cfb128.cpp  openssl_md32_common.h  openssl_md5.h  openssl_md5_dgst.cpp  openssl_md5_locl.h  openssl_md5_one.cpp
libs/mmkv/Core/crc32/zlib/: crc32.h
libs/stub/: build.gradle
libs/stub/src/main/: AndroidManifest.xml
libs/xhook/: CMakeLists.txt
stub/src/main/: AndroidManifest.xml
stub/src/main/java/mqq/app/: MobileQQ.java
(+820 files in other folders)
